# pyfsense-client

./: .gitignore  .gitlab-ci.yml  DEVEOP.md  README.md  check_stuff.py  local.yml  mkdocs.yml  pfsense-api.json  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: dependency_review.yml  mkdocs.yml  mypy.yml  pylint.yml  pytest.yml  shellcheck.yml
docker/local/: Dockerfile
examples/: dhcp.py
pfsense_api_client/: __init__.py  api_types.py  interface.py  routing.py  status.py  system.py  user.py
pfsense_api_client/client/: __init__.py  abc.py  api_types.py  base.py  client.py  types.py
pfsense_api_client/mixins/: __init__.py  dns.py  firewall.py  firewall_alias.py  interface.py  routing.py  service.py  status.py  system.py  user.py
pfsense_api_client/service/: dns.py
pyfsense_client/client/: types.py
pyfsense_client/mixins/: dns.py
pyfsense_client/models/: __init__.py  firewall_alias.py
requirements/: requirements_dev.txt
scripts/: cherry_pick_github.sh  create_replacement.py  repo_cleanup.sh  restore_repo.sh  rewrite_history.sh  trigger_force_sync.sh
src/pyfsense_client/: __init__.py  constants.py
src/pyfsense_client/client/: abc.py  client.py  types.py
src/pyfsense_client/mixins/: dns.py  firewall.py  firewall_alias.py  interface.py  routing.py  service.py  status.py  system.py  user.py
src/pyfsense_client/models/: firewall_alias.py
src/pyfsense_client/v1/client/: __init__.py  abc.py  client.py  types.py
src/pyfsense_client/v1/mixins/: __init__.py  firewall.py  firewall_alias.py  routing.py  service.py  status.py  system.py
src/pyfsense_client/v1/models/: __init__.py  firewall_alias.py
src/pyfsense_client/v2/: __init__.py  client.py  exceptions.py  models.py
src/pyfsense_client/v2/models/: __init__.py  client.py  dhcp.py  firewall_alias.py
tests/: mocks.py  test_client.py  test_models.py
tests/e2e/: test_e2e.py
tests/integration/: test_aliases.py  test_api.py  test_dhcp.py  test_firewall.py  test_system.py
tests/unit/: mocks.py  test_api_configuration_methods.py  test_client.py  test_client_auth.py  test_dhcp_methods.py  test_firewall_alias_methods.py  test_firewall_alias_models.py  test_firewall_rule_methods.py  test_models.py  test_status_methods.py  test_system_status.py
tests/unit/v1/: test_api_configuration_methods.py  test_client.py  test_client_auth.py  test_dhcp_methods.py  test_firewall_alias_methods.py  test_firewall_alias_models.py  test_firewall_rule_methods.py  test_models.py  test_status_methods.py  test_system_status.py
tests/unit/v2/: test_client.py  test_client_dhcp.py  test_exceptions.py  test_models.py
