[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfsense_client"
requires-python = ">=3.11"
dynamic = ["version"]
description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
readme = "README.md"
license = "MIT"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
    { name = "Devin Barry", email = "devinbarry@users.noreply.github.com" },
]
keywords = [
    "pfsense",
    "API",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/yaleman/pfsense-api-client/"
repository = "https://github.com/yaleman/pfsense-api-client/"
documentation = "https://yaleman.github.io/pfsense-api-client/"

[tool.hatch.version]
path = "src/pyfsense_client/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["src/pyfsense_client"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfsense_client"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
click = "^8.0.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"
mypy = "^1.0"
black = "^23.1"
types-requests = "^2.28.11"
pylint-pydantic = "^0.1.4"
mkdocstrings = "^0.20.0"
mkdocs-material = "^9.0.2"
mkdocs = "^1.4.2"
loguru = "^0.6.0"
pylint-pytest = "^1.1.2"
click = "^8.1.2"
questionary = "^1.10.0"
mkdocstrings-python = "^0.8.0"

