[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfsense_client"
requires-python = ">=3.11"
dynamic = ["version"]
description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
readme = "README.md"
license = "MIT"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
    { name = "Devin Barry", email = "devinbarry@users.noreply.github.com" },
]
keywords = [
    "pfsense",
    "API",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests",
    "pydantic>=2.6"
]

[project.urls]
homepage = "https://github.com/yaleman/pfsense-api-client/"
repository = "https://github.com/yaleman/pfsense-api-client/"
documentation = "https://yaleman.github.io/pfsense-api-client/"

[tool.hatch.version]
path = "src/pyfsense_client/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["src/pyfsense_client"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfsense_client"]
